added environment variables and routes for o auth

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SESSION_DOMAIN=.jurnia.com
 SANCTUM_STATEFUL_DOMAINS=https://app.jurnia.com
+
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=http://api.jurnia.com/social/google/callback
